changed well target to reservoir target

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <header>
-    <h1>Well Target Generator</h1>
+    <h1>Reservoir Target Generator</h1>
     <p>By Patrick Machado</p>
   </header>
 
