--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
   <header>
     <h1>Reservoir Target Generator</h1>
-    <p>By Patrick Machado</p>
+    <p>Prototype Version</p>
   </header>
 
   <main class="container">
