--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <th style="min-width:160px">Target Z (start)
                 <span class="th-sub">Negative depth (<span class="unit-tag">m</span>)</span>
               </th>
-              <!-- Interval (ΔZ) column intentionally removed/hidden; fixed to 200 m in logic -->
+              <!-- I removed the Interval (ΔZ) column; it's fixed at 200 m in the logic. -->
               <th style="min-width:80px">Actions</th>
             </tr>
           </thead>
@@ -132,16 +132,16 @@
       <td><input type="number" step="any" placeholder="x" aria-label="Target X"></td>
       <td><input type="number" step="any" placeholder="y" aria-label="Target Y"></td>
       <td><input type="number" step="any" placeholder="-6000" aria-label="Target Z start"></td>
-      <!-- Interval (ΔZ) input removed; value is fixed in script -->
+      <!-- I removed the Interval (ΔZ) input; I fix the value in the script. -->
       <td class="action"><button class="remove-btn" title="Remove row">Remove</button></td>
     </tr>
   </template>
 
   <script>
-    // WHY: Keep interval out of UI; always 200 m, auto-converted if unit=ft.
+    // I keep the interval out of the UI; it's always 200 m and I auto-convert when the unit is ft.
     const DEFAULT_INTERVAL_M = 200;
 
-    // WHY: IDs assume 'ft:1' exists in your reference-data; change UNIT_ID_MAP if different in your environment.
+    // These IDs assume 'ft:1' exists in my reference data; update UNIT_ID_MAP if your setup differs.
     const UNIT_ID_MAP = {
       m: "qa-weu-des-prod-testing-eu:reference-data--UnitOfMeasure:m:1",
       ft: "qa-weu-des-prod-testing-eu:reference-data--UnitOfMeasure:ft:1"
@@ -238,7 +238,6 @@
 
         zStart = -Math.abs(zStart);
 
-        // Fixed interval: 200 m, auto-convert to ft if needed.
         const interval = CURRENT_UNIT === 'm' ? DEFAULT_INTERVAL_M : DEFAULT_INTERVAL_M * M_TO_FT;
 
         const zEnd = zStart - Math.abs(interval);
@@ -368,7 +367,7 @@
       for (let r = 0; r < matrix.length; r++){
         const rowEl = tbody.rows[startRowIdx + r];
         const cells = matrix[r];
-        // Max input column index is 5 (name..z)
+        // I cap at the first 6 inputs (name..z).
         for (let c = 0; c < cells.length && (startCol + c) < 6; c++){
           setCell(rowEl, startCol + c, cells[c]);
         }
@@ -386,9 +385,9 @@
         const [ , , , x, y, z] = tr.querySelectorAll('input,select');
         const xn = toNum(x.value); if (xn !== null) setRounded(x, xn * factor);
         const yn = toNum(y.value); if (yn !== null) setRounded(y, yn * factor);
-        const zn = toNum(z.value); if (zn !== null) setRounded(z, -Math.abs(zn * factor)); // keep negative
+        const zn = toNum(z.value); if (zn !== null) setRounded(z, -Math.abs(zn * factor));
       });
-      // WHY: Interval is fixed in meters; we don't store it in inputs. JSON/summary recomputed with converted interval via collect().
+      // I keep the interval fixed in meters and out of the inputs. JSON/summary are recomputed after unit changes via collect().
     }
 
     addOneBtn.addEventListener('click', ()=> addRow());
@@ -436,7 +435,6 @@
       fileMetaEl.textContent = `Units changed to ${CURRENT_UNIT}. Please Generate JSON again.`;
     });
 
-    // init
     addRow();
     updateUnitBadges();
   </script>
